Fixed unclearable select overflows over arrow-zone #89244

--- a/src/floating-select/floating-select.component.scss
+++ b/src/floating-select/floating-select.component.scss
@@ -15,3 +15,8 @@
     }  
   }
 }
+
+/* This can be removed when https://github.com/JedWatson/react-select/issues/2178 is fixed. */
+.Select--single .Select-control .Select-multi-value-wrapper .Select-value {
+  padding-right: 25px;
+}
